--- a/styles.css
+++ b/styles.css
@@ -32,20 +32,21 @@ body {
     display: flex;
     width: 900px;
     height: 400px;
-    gap: 20px;
+    gap: 10px;
     background-color: var(--dark-des-blue);
+    border-radius: 8px;
 }
 
 .card-content {
     width: 450px;
     padding: 50px;
-    margin-bottom: 30px;
     background-color: var(--dark-des-blue);
     border-radius: 8px 0 8px 0;
 }
 
 .card-content .card-content-top {
     display: block;
+    margin-bottom: 50px;
 }
 
 .card-content .card-content-top h2 {
@@ -71,16 +72,19 @@ body {
 }
 
 .card-content .card-content-bottom .column h3 {
+    margin: 0 0 5px;
     font-size: 18px;
     font-weight: 700;
-    color: var(--slight-white-75);
+    color: var(--white);
     font-family: 'Inter', sans-serif;
 }
 
 .card-content .card-content-bottom .column p {
-    font-size: 15px;
+    margin: 0;
+    font-size: 12px;
     font-weight: 400;
     color: var(--slight-white-60);
+    text-transform: uppercase;
 }
 
 .card-image {
@@ -91,6 +95,8 @@ body {
     max-width: 100%;
     width: 100%;
     height: 100%;
+    border-radius: 0 8px 8px 0;
+
 }
 
 .sp {
