--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 .card {
     display: flex;
     width: 900px;
-    height: 400px;
+    height: 370px;
     gap: 10px;
     background-color: var(--dark-des-blue);
     border-radius: 8px;
@@ -39,7 +39,7 @@ body {
 
 .card-content {
     width: 450px;
-    padding: 50px;
+    padding: 30px 50px;
     background-color: var(--dark-des-blue);
     border-radius: 8px 0 8px 0;
 }
@@ -56,10 +56,15 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+.card-content .card-content-top h2 span {
+    color: var(--soft-violet);
+}
+
 .card-content .card-content-top p {
-    font-size: 15px;
-    font-weight: 400;
+    font-size: 14px;
+    font-weight: 300;
     color: var(--slight-white-75);
+    line-height: 1.5;
 }
 
 .card-content .card-content-bottom {
@@ -88,7 +93,18 @@ body {
 }
 
 .card-image {
+    position: relative;
     width: 450px;
+}
+
+.card-image:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--soft-violet);
+    opacity: 0.4;
+    border-radius: 0 8px 8px 0;
 }
 
 .card-image img {
